# PocketMind-AI

./: .gitignore  FUTURE_FEATURES_PLAN.md  INSTRUCTIONS_RTX_4050.md  LICENSE  Makefile  README.md  RTX_4050_COMPUTE_GUIDE.md  TASK_CHECKLIST.md  pyproject.toml
.git copy/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.git copy/logs/: HEAD
.git copy/logs/refs/heads/: main
.git copy/logs/refs/remotes/origin/: main
.git copy/refs/remotes/origin/: main
configs/: debug.yaml  full.yaml  small.yaml
scripts/: index_workspace.py  prepare_corpus.py  print_config.py  tokenize_corpus.py  train.py  train_tokenizer.py
src/pocketmind/: __init__.py  config.py
src/pocketmind/actions/: constrained_decode.py  executor.py  schema.py
src/pocketmind/data/: cleaning.py  deduplication.py  memmap_dataset.py
src/pocketmind/model/: attention_optimized.py  attention_reference.py  block.py  feed_forward.py  pocketmind.py  recurrent_memory.py  rmsnorm.py  rope.py
src/pocketmind/retrieval/: store.py
src/pocketmind/tokenizer/: bpe.py  byte_tokenizer.py  serialization.py
src/pocketmind/training/: checkpoint.py  schedule.py  trainer.py
tests/unit/: test_actions.py  test_attention_optimized.py  test_cleaning.py  test_config.py  test_dataset.py  test_model.py  test_recurrent.py  test_retrieval.py  test_tokenizer.py  test_trainer.py
