[project]
name = "pocketmind"
version = "0.1.0"
description = "A memory-augmented local language model built from first principles"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "torch>=2.3",
  "numpy>=1.26",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
  "tqdm>=4.66",
  "scikit-learn>=1.5",
  "pytest>=8.2",
  "safetensors>=0.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pocketmind"]
